Explicitly drop auth data in metrics uploads.

BUG=681691

Review-Url: https://codereview.chromium.org/2637843003
Cr-Commit-Position: refs/heads/master@{#444072}

Former-commit-id: 5999df8fb8b740e527e16666f65a49118450016e